--- a/src/pixelsorter/OptionPanel.form
+++ b/src/pixelsorter/OptionPanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="OptionPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="pixelsorter.OptionPanel">
   <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="30" vgap="20">
     <constraints>
       <xy x="20" y="20" width="950" height="477"/>
