--- a/src/pixelsorter/OptionPanel.form
+++ b/src/pixelsorter/OptionPanel.form
@@ -110,7 +110,9 @@
           <grid id="d30bf" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="true" same-size-vertically="true" hgap="-1" vgap="-1">
             <margin top="0" left="20" bottom="0" right="0"/>
             <constraints border-constraint="North"/>
-            <properties/>
+            <properties>
+              <font size="18" style="1"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="3964e" class="javax.swing.JButton" binding="ButtonUpLeft">
@@ -120,7 +122,8 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="↖"/>
+                  <font size="16" style="1"/>
+                  <text value="🡔"/>
                 </properties>
               </component>
               <component id="c60b" class="javax.swing.JButton" binding="ButtonLEFT">
@@ -130,7 +133,8 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="←"/>
+                  <font size="16" style="1"/>
+                  <text value="🡐"/>
                 </properties>
               </component>
               <component id="f0d25" class="javax.swing.JButton" binding="ButtonDownLeft">
@@ -140,7 +144,8 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="↙"/>
+                  <font size="16" style="1"/>
+                  <text value="🡗"/>
                 </properties>
               </component>
               <component id="3ca94" class="javax.swing.JButton" binding="ButtonUP">
@@ -150,7 +155,8 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="↑"/>
+                  <font size="16" style="1"/>
+                  <text value="🡑"/>
                 </properties>
               </component>
               <component id="5b547" class="javax.swing.JButton" binding="ButtonUpRight">
@@ -161,7 +167,8 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="↗"/>
+                  <font size="16" style="1"/>
+                  <text value="🡕"/>
                 </properties>
               </component>
               <component id="1eb14" class="javax.swing.JButton" binding="ButtonRIGHT">
@@ -171,7 +178,8 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="→"/>
+                  <font size="16" style="1"/>
+                  <text value="🡒"/>
                 </properties>
               </component>
               <component id="364ab" class="javax.swing.JButton" binding="ButtonDOWN">
@@ -181,7 +189,8 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="↓"/>
+                  <font size="16" style="1"/>
+                  <text value="🡓"/>
                 </properties>
               </component>
               <component id="32d48" class="javax.swing.JButton" binding="ButtonDownRight">
@@ -191,7 +200,8 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="↘"/>
+                  <font size="16" style="1"/>
+                  <text value="🡖"/>
                 </properties>
               </component>
             </children>
