--- a/src/pixelsorter/OptionPanel.form
+++ b/src/pixelsorter/OptionPanel.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="pixelsorter.OptionPanel">
   <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="30" vgap="20">
     <constraints>
-      <xy x="20" y="20" width="950" height="477"/>
+      <xy x="20" y="20" width="950" height="498"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -214,26 +214,50 @@
               </component>
             </children>
           </grid>
-          <grid id="16d37" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="16d37" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="20" bottom="0" right="0"/>
             <constraints border-constraint="South"/>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="68053" class="javax.swing.JButton" binding="saveButton" default-binding="true">
+              <component id="a60e3" class="javax.swing.JButton" binding="freezeButton">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Save"/>
+                  <text value="Freeze"/>
+                </properties>
+              </component>
+              <component id="68053" class="javax.swing.JButton" binding="saveButton" default-binding="true">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="&gt;Save&lt;"/>
+                </properties>
+              </component>
+              <component id="b735c" class="javax.swing.JButton" binding="unfreezeButton">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Unfreeze"/>
                 </properties>
               </component>
               <component id="2cedd" class="javax.swing.JButton" binding="saveAsButton">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Save as"/>
+                  <text value="Save as..."/>
+                </properties>
+              </component>
+              <component id="215c3" class="javax.swing.JButton" binding="setLastSavedImage">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Load/set last saved image"/>
                 </properties>
               </component>
             </children>
